--- a/src/Component/SearchPost/SearchPost.css
+++ b/src/Component/SearchPost/SearchPost.css
@@ -7,13 +7,13 @@
     padding: 20px;
     border: 1px solid #ccc;
     box-shadow: 0 2px 4px rgba(33, 33, 33, 0.2);
-    width: 70%;
+    width: 100%;
     height: 70vh;
     background-color: white;
     color:black;
   }
   .search-title{
-    width: 60%;
+    /* width: 60%; */
     /* border-radius: 10%; */
     cursor: pointer;
   }
